# aethellib

./: Cargo.toml  IMPLEMENTATION_0.4.0.md  README.md  untitled:plan-generatorRefactor.prompt.md
data/: person_test_data.toml  weapon_merge_part_1.toml  weapon_merge_part_2.toml  weapon_merge_part_3.toml  weapon_merge_part_4.toml  weapon_test_data.toml
docs/: .gitignore  adding-new-target.md  astro.config.mjs  package-lock.json  package.json
docs/content/docs/: generator-module-developer-guide.mdx
docs/src/app/(home)/: page.tsx
docs/src/content/docs/reference/: adding-new-target.md
docs/src/lib/: shared.ts
examples/: 01_weapon_from_file.rs  02_person_from_file.rs  03_weapon_deterministic_rng.rs  04_generator_from_documents.rs  05_generator_new_with_corpus.rs  06_targeted_loader_from_file.rs  07_loader_error_handling.rs  08_merge_target_files.rs  09_merge_with_options.rs  10_merge_mixed_targets.rs  11_merged_doc_conversions.rs  12_weapon_provenance.rs  13_custom_target.rs  14_generator_from_aetheldoc.rs  15_generator_from_aetheldoc_single.rs  custom_target_from_file.rs  generation_0_5.rs  main.rs  persongen_from_file.rs  test.rs  weapongen.rs  weapongen_from_documents.rs  weapongen_from_file.rs  weapongen_new_corpus.rs  weapongen_provenance.rs  weapongen_provenance_from_documents.rs  weapongen_provenance_from_file.rs  weapongen_provenance_new_corpus.rs
examples/common/: mod.rs
src/: lib.rs  prelude.rs  test_support.rs
src/corpus/: error.rs  mod.rs  types.rs  utils.rs
src/engine/: combinators.rs  error.rs  mod.rs
src/generator/: generator_person.rs  generator_weapon.rs  mod.rs  utils.rs
src/generators/: generator_person.rs  generator_weapon.rs  mod.rs  utils.rs
src/loader/: error.rs  loader_person.rs  loader_weapon.rs  mod.rs  utils.rs
src/merge/: merge_weapon.rs  mod.rs
src/merger/: error.rs  merger_options.rs  mod.rs  utils.rs
src/rules/: mod.rs
