[package]
name = "aethellib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
rand = "0.8.5"
tracing = "0.1.44"
sha2 = "0.10.9"


[features]
# enable built-in generators by default
default = ["built-in"]

# enables all generator features
built-in = ["weapon-gen", "person-gen"]

# generator features
weapon-gen = []
person-gen = []